--- a/index.css
+++ b/index.css
@@ -7,12 +7,22 @@ body {
 .grid-container {
   height: 100vh;
   width: 100vw;
-  /* your properties here */
+  display: grid;
+grid-template: [header-start] 1fr [header-end] 1fr 1fr 1fr / 1fr 1fr 1fr;
+grid-gap: 5px
 }
 
 .grid-item {
   background-color: grey;
   border: 1px solid black;
+
 }
 
 /* add the .bigItem class */
+
+.bigItem {
+grid-area: 2 / 2 / 4 / 4;
+height: 50%;
+width: 50%;
+justify-self: center;
+}
