--- a/index.css
+++ b/index.css
@@ -7,7 +7,9 @@ body {
 .grid-container {
   height: 100vh;
   width: 100vw;
+  display: grid-template;
   /* your properties here */
+  
 }
 
 .grid-item {
@@ -16,3 +18,6 @@ body {
 }
 
 /* add the .bigItem class */
+.bigItem{
+  display: grid-area;}
+}
