--- a/index.css
+++ b/index.css
@@ -8,6 +8,9 @@ body {
   height: 100vh;
   width: 100vw;
   /* your properties here */
+  grid-template: 1fr 1fr 1fr 1fr / 1fr 1fr 1fr;
+   display: grid;
+    grid-gap: 5px;
 }
 
 .grid-item {
@@ -16,3 +19,9 @@ body {
 }
 
 /* add the .bigItem class */
+    .bigItem {
+      grid-area: 2 / 2 / 4 / 4;
+      height: 50%;
+      width: 50%;
+      justify-self: center;
+    }
